began adding components and styling on top of bootstrap defaults

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           <li class="list-group-item list-group-item-dark">Porta ac consectetur ac</li>
         </ul>
 
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
             <div class="p-3 swatch-100">100</div>
             <div class="p-3 swatch-200">200</div>
             <div class="p-3 swatch-300">300</div>
@@ -423,7 +423,7 @@
             <div class="p-3 swatch-700">700</div>
             <div class="p-3 swatch-800">800</div>
             <div class="p-3 swatch-900">900</div>
-          </div>
+        </div> -->
       </div>
     </div>
 
@@ -542,6 +542,349 @@
       </div>
     </div>
   </div>
+  <hr><hr><hr><hr>
+  <div class="container">
+    <h3>Timeline</h3>
+    <ul class="timeline">
+      <li class="timeline-header"><strong>What</strong> Lorem Ipsum Foobar</li>
+      <li class="timeline-header"><strong>Thing</strong> Another Thing thing <br>foo bar</li>
+      <li class="timeline-event">foo bar shoe bar foooo</li>
+      <li class="timeline-header"><strong>That</strong> Metaphor Foo Thing</li>
+    </ul>
+    <pre>
+      <code>
+        &lt;ul class=&quot;timeline&quot;&gt;
+          &lt;li class=&quot;timeline-item&quot;&gt;&lt;strong&gt;What&lt;/strong&gt; Lorem Ipsum Foobar&lt;/li&gt;
+          &lt;li class=&quot;timeline-item&quot;&gt;&lt;strong&gt;Thing&lt;/strong&gt; Another Thing thing &lt;br&gt;foo bar&lt;/li&gt; 
+          &lt;li class=&quot;timeline-item&quot;&gt;&lt;strong&gt;That&lt;/strong&gt; Metaphor Foo Thing&lt;/li&gt; 
+        &lt;/ul&gt;
+      </code>
+    </pre>
+  </div>
+  <hr><hr><hr><hr>
+  <div class="container">
+    <div class="rise-arrow">
+    </div>
+  </div>
+  <hr><hr><hr><hr>
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <a class="card text-center text-dark" href="#">
+          <div class="card-body">
+            META+LAB
+          </div>
+        </a>
+        <div class="card text-center text-dark">
+          <div class="card-body">
+            Computer Science
+          </div>
+        </div>
+
+        <ul class="list-unstyled">
+          <li>
+            <span class="badge badge-success">Web Development</span>
+          </li>
+          <li>
+            <span class="badge badge-success">Programming Languages</span>
+          </li>
+          <li>
+            <span class="badge badge-success">Parallel and Distributed Programming</span>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+  <hr><hr><hr><hr>
+  <div class="container">
+    
+    <div>
+      <h3>Column Nav On All Viewports</h3>
+      <ul class="nav flex-column nav--branded nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Column Nav On XS, Row Nav on SM & Up</h3>
+      <ul class="nav flex-column flex-sm-row nav--branded nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+
+      <h3>Column Nav On XS, Row Nav on SM & Up (elements "fill" once in a row)</h3>
+      <p>note: to get nav elements to "fill" once they turn to ROW nav (on SM viewports), add the class of .flex-sm-fill to each .nav-item (should combine with class of .text-sm-center for full effect)</p>
+      <ul class="nav flex-column flex-sm-row nav--branded nav-pills">
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item flex-sm-fill text-sm-center">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Column Nav On XS & SM, Row Nav on MD & Up</h3>
+      <ul class="nav flex-column flex-md-row nav--branded nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Column Nav On XS & SM & MD, Row Nav on LG & Up</h3>
+      <ul class="nav flex-column flex-lg-row nav--branded">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Column Nav On XS & SM & MD & LG, Row Nav on XL</h3>
+      <ul class="nav flex-column flex-xl-row nav--branded">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <hr><hr><hr><hr>
+  <div class="container">
+    <div>
+      <h3>Row Nav On All Viewports</h3>
+      <ul class="nav nav--branded nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Row Nav On XS, Column Nav on SM & Up</h3>
+      <ul class="nav flex-row flex-sm-column nav--branded nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Row Nav On XS & SM, Column Nav on MD & Up</h3>
+      <ul class="nav flex-row flex-md-column nav--branded nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Row Nav On XS & SM & MD, Column Nav on LG & Up</h3>
+      <ul class="nav flex-row flex-lg-column nav--branded">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+
+      <h3>Row Nav On XS & SM & MD & LG, Column Nav on XL</h3>
+      <ul class="nav flex-row flex-xl-column nav--branded">
+        <li class="nav-item">
+          <a class="nav-link active" href="">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Link</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <hr><hr><hr><hr>
+
+
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
