organized sass code structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Custom built theme - This already includes Bootstrap 4 -->
-  <link rel="stylesheet" href="css/theme.min.css">
+  <link rel="stylesheet" href="css/metaphor-v2.min.css">
 </head>
 <body>
 
@@ -551,15 +551,18 @@
       <li class="timeline-event">foo bar shoe bar foooo</li>
       <li class="timeline-header"><strong>That</strong> Metaphor Foo Thing</li>
     </ul>
-    <pre>
-      <code>
-        &lt;ul class=&quot;timeline&quot;&gt;
-          &lt;li class=&quot;timeline-event&quot;&gt;&lt;strong&gt;What&lt;/strong&gt; Lorem Ipsum Foobar&lt;/li&gt;
-          &lt;li class=&quot;timeline-event&quot;&gt;&lt;strong&gt;Thing&lt;/strong&gt; Another Thing thing &lt;br&gt;foo bar&lt;/li&gt; 
-          &lt;li class=&quot;timeline-event&quot;&gt;&lt;strong&gt;That&lt;/strong&gt; Metaphor Foo Thing&lt;/li&gt; 
-        &lt;/ul&gt;
-      </code>
-    </pre>
+    <div class="alert alert-light">
+      <pre>
+        <code>
+          &lt;ul class=&quot;timeline&quot;&gt;
+            &lt;li class=&quot;timeline-header&quot;&gt;&lt;strong&gt;What&lt;/strong&gt; Lorem Ipsum Foobar&lt;/li&gt;
+            &lt;li class=&quot;timeline-header&quot;&gt;&lt;strong&gt;Thing&lt;/strong&gt; Another Thing thing &lt;br&gt;foo bar&lt;/li&gt; 
+            &lt;li class=&quot;timeline-event&quot;&gt;&lt;strong&gt;Thing&lt;/strong&gt; Another Thing thing &lt;br&gt;foo bar&lt;/li&gt; 
+            &lt;li class=&quot;timeline-header&quot;&gt;&lt;strong&gt;That&lt;/strong&gt; Metaphor Foo Thing&lt;/li&gt; 
+          &lt;/ul&gt;
+        </code>
+      </pre>
+    </div>
   </div>
   <hr><hr><hr><hr>
   <div class="container">
