--- a/metaphor-custom-components.html
+++ b/metaphor-custom-components.html
@@ -718,6 +718,22 @@
     </div>
     <br><br>
 
+   <!--  <div class="rise-arrow rise-arrow--2tone">
+    </div>
+
+    <br><br>
+
+    <div class="rise-arrow">
+    </div>
+    <div class="rise-arrow">
+    </div>
+    <div class="rise-arrow rise-arrow--dark">
+    </div>
+
+    <div class="rise-arrow rise-arrow--bottom">
+    </div> -->
+
+
     <div class="alert alert-light">
       <pre>
         <code>
