--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <li class="list-group-item">
         <a href="/metaphor-custom-components.html">Page displaying MetaphorV2 custom components</a>
       </li>
+
+      <li class="list-group-item">
+        <a href="/fonts.html">Page displaying fonts</a>
+      </li>
+
     </ul>
 
     <h2>External Links</h2>
