add font library and documentation, finalize fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <!-- Custom built theme - This already includes Bootstrap 4 -->
   <link rel="stylesheet" href="css/metaphor-v2.min.css">
+
+  <link rel="preload" href="fonts/ATCOverlook-Regular.woff2" as="font" type="font/woff2" crossorigin>
+
+  <script defer src="/js/fontawesome/all.js"></script>
 </head>
 <body>
   <div class="container">
@@ -23,10 +27,6 @@
 
       <li class="list-group-item">
         <a href="/metaphor-custom-components.html">Page displaying MetaphorV2 custom components</a>
-      </li>
-
-      <li class="list-group-item">
-        <a href="/fonts.html">Page displaying fonts</a>
       </li>
 
     </ul>
