--- a/bootstrap-components.html
+++ b/bootstrap-components.html
@@ -8,6 +8,10 @@
 
   <!-- Custom built theme - This already includes Bootstrap 4 -->
   <link rel="stylesheet" href="css/metaphor-v2.min.css">
+
+  <link rel="preload" href="fonts/ATCOverlook-Regular.woff2" as="font" type="font/woff2" crossorigin>
+
+  <script defer src="/js/fontawesome/all.js"></script>
 </head>
 <body>
 
