major updated to docs. Also updated some paths for fonts and images, as S3 bucket changed

--- a/docs-og/metaphor-custom-components.html
+++ b/docs-og/metaphor-custom-components.html
@@ -11,7 +11,7 @@
 
   <link rel="preload" href="../dist/fonts/ATCOverlook-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
-  <script defer src="../dist/js/fontawesome/all.js"></script>
+  <script defer src="../node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
 </head>
 <body>
   <div class="container">
@@ -1042,7 +1042,7 @@
       <div class="col-12 col-md-5">
         <div class="row mb-3 mb-md-0">
           <div class="col-12 col-md-3">
-              <img class="d-block mx-auto mx-md-0 img-fluid footer-metaphor__emblem mb-3 mb-md-0" src="//s3-us-west-2.amazonaws.com/metalab-fonts/images/csun-emblem.svg">
+              <img class="d-block mx-auto mx-md-0 img-fluid footer-metaphor__emblem mb-3 mb-md-0" src="//s3-us-west-2.amazonaws.com/csun-metalab/metaphor/dist/img/csun-emblem.svg" alt="CSUN Emblem">
           </div>
           <div class="col-12 col-md-9">
             <h6>META+LAB </h6>
@@ -1088,7 +1088,7 @@
       <div class="container">
           <div class="row">
               <div class="col-md-2">
-                  <img class="footer-metaphor__logo mb-3" src="//s3-us-west-2.amazonaws.com/metalab-fonts/images/metalab-logo.svg">
+                  <img class="footer-metaphor__logo mb-3" src="//s3-us-west-2.amazonaws.com/csun-metalab/metaphor/dist/img/metalab-logo.svg" alt="META+LAB Logo">
                   <div class="mb-2 mb-md-0">
                     <a href="//www.metalab.csun.edu" target="csun">metalab.csun.edu</a>
                   </div>
